[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/GUI/GUI_new.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.870588, 0.137255, 0.137255, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.227451, 0.227451, 0.227451, 1 )

[node name="GUI" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.5
margin_top = -25.0
margin_right = 33.5
margin_bottom = 25.0
action_mode = 0
text = "Play"

[node name="Button3" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 278.0
margin_top = -30.0
margin_right = 345.0
margin_bottom = 20.0
action_mode = 0
text = "Connect"

[node name="Button4" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 278.0
margin_top = 30.0
margin_right = 345.0
margin_bottom = 80.0
action_mode = 0
text = "Host"

[node name="Button2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.5
margin_top = 40.0
margin_right = 33.5
margin_bottom = 90.0
action_mode = 0
text = "Close"

[node name="Path" type="LineEdit" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.0
margin_top = -90.0
margin_right = 126.0
margin_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "res://Scenes/Map/Map.tscn"
align = 1
expand_to_text_length = true

[node name="IP" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 218.0
margin_top = -90.0
margin_right = 406.0
margin_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "127.0.0.1"
align = 1
expand_to_text_length = true

[node name="Error" type="Popup" parent="."]
visible = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 130.0
margin_right = 20.0
margin_bottom = 170.0

[node name="Label" type="Label" parent="Error"]
margin_left = -92.0
margin_top = 20.0
margin_right = 128.0
margin_bottom = 50.0
custom_styles/normal = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "There is no Scene with this path!"
align = 1
valign = 1

[node name="Label" type="Label" parent="."]
margin_left = 250.0
margin_top = 290.0
margin_right = 370.0
margin_bottom = 320.0
custom_styles/normal = SubResource( 2 )
text = "Mouse Sensitiviy"
align = 1
valign = 1

[node name="Resolution2" type="Label" parent="."]
margin_left = 100.0
margin_top = 340.0
margin_right = 220.0
margin_bottom = 370.0
custom_styles/normal = SubResource( 2 )
text = "Resolution"
align = 1
valign = 1

[node name="Resolution3" type="Label" parent="."]
margin_left = 320.0
margin_top = 350.0
margin_right = 340.0
margin_bottom = 370.0
custom_styles/normal = SubResource( 2 )
text = "X"
align = 1
valign = 1

[node name="MouseSens" type="LineEdit" parent="."]
margin_left = 378.0
margin_top = 290.0
margin_right = 438.0
margin_bottom = 320.0
align = 1

[node name="width" type="LineEdit" parent="."]
margin_left = 250.0
margin_top = 340.0
margin_right = 310.0
margin_bottom = 370.0
text = "2560"
align = 1

[node name="height" type="LineEdit" parent="."]
margin_left = 350.0
margin_top = 340.0
margin_right = 410.0
margin_bottom = 370.0
text = "1440"
align = 1
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button_close_pressed"]
